cmake_minimum_required(VERSION 2.8.9)
project (hello)
file(GLOB SOURCES "src/*.cpp")
include_directories(include)
add_executable(hello ${SOURCES})

include(GoogleTest)
add_executable(FooTest "unit_test/rectangle_test.cpp" ${SOURCES})
gtest_add_tests(FooTest "" AUTO)
target_link_libraries(FooTest "/home/spovilus/googletest/lib/libgtest.a")
